11-ingress-rules/vault/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: vault-ingress
  namespace: vault

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - vault.akashlab.local
      secretName: wildcard-akashlab-tls

  rules:
    - host: vault.akashlab.local

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: vault-ui

                port:
                  number: 8200
